Added passwords forgot and change feature

--- a/app/assets/stylesheets/casino.scss
+++ b/app/assets/stylesheets/casino.scss
@@ -1,5 +1,6 @@
 @import "casino/normalize";
 @import "casino/icons";
+@import "casino/passwords";
 
 /// DEFAULT SETTINGS ///
 $buttonColor: #0074ad !default;
@@ -267,7 +268,7 @@ table {
 }
 
 /// SESSIONS ///
-.sessions, .logout {
+.sessions, .logout, .passwords {
   width: 800px;
 
   .info {
