--- a/app/views/casino/passwords/forgot.html.erb
+++ b/app/views/casino/passwords/forgot.html.erb
@@ -11,7 +11,7 @@
       <h1><%= t('forgot_password.title') %></h1>
       <%= form_tag(forgot_password_path, method: :post, id: 'forgot-password-form') do %>
         <%= label_tag :username, t('forgot_password.label_username') %>
-        <%= text_field_tag :username, params[:username], autofocus:true %>
+        <%= text_field_tag :login, params[:login], autofocus:true %>
         <%= button_tag t('forgot_password.label_button'), :class => 'button' %><br/>
         <%= link_to t('shared.back'), login_path %>
       <% end %>
